@@ -1,3 +1,10 @@
+2008-06-28  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	PR target/34856
+	* config/spu/spu.c (spu_builtin_splats): Do not generate
+	invalid CONST_VECTOR expressions.
+	(spu_expand_vector_init): Likewise.
+
 2008-06-28  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* optabs.c (libfunc_decls): New variable.
